--- a/styles/style.css
+++ b/styles/style.css
@@ -90,6 +90,10 @@ input.tip{
     background-color: #f3f8fb;
     width: 6rem;
     height: 3rem;
+    border-radius: 8px;
+    font-family: 'Space Mono';
+    border-color: #f3f8fb;
+    text-align: right;
 }
 
 button.tip{
@@ -102,6 +106,7 @@ button.tip{
     font-family: 'Space Mono';
     font-size: 120%;
     margin-top: 0.5rem;
+    margin-right: 1rem;
 }
 
 button.tip:hover{
