--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,8 @@
+@import url(https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap);
+
 body{
     background-color: hsl(185, 41%, 84%);
 }
-
 
 h1{
     font-family: 'Space Mono';
@@ -73,7 +74,7 @@ input.long-input{
     width: 21rem;
     border: 5px solid #f3f8fb;
     border-radius: 10px;
-    font-family: 'Mono Space';
+    font-family: 'Space Mono';
     font-size: 1rem;
     text-align: right;
 }
@@ -92,6 +93,8 @@ input.tip{
     height: 3rem;
     border-radius: 8px;
     font-family: 'Space Mono';
+    font-size: 1rem;
+    color: hsl(183, 100%, 15%);
     border-color: #f3f8fb;
     text-align: right;
 }
@@ -115,10 +118,10 @@ button.tip:hover{
     border-color: hsl(185, 41%, 84%);
 }
 
-.press{
-    background-color: hsl(183, 100%, 15%);
+button.tip:active{
+    background-color: hsl(172, 67%, 45%);
     border-color: hsl(172, 67%, 45%);
-    color: hsl(172, 67%, 45%);
+    color: hsl(183, 100%, 15%);
 }
 div.box3{
     background-color: hsl(183, 100%, 15%);
@@ -168,6 +171,11 @@ button.reset{
     margin-left: 1rem;
     border: 5px solid hsl(183, 100%, 15%);
     border-radius: 10px;
+}
+
+button.reset:hover{
+    background-color: hsl(185, 41%, 84%);
+    color: hsl(183, 100%, 15%);
 }
 /*phone*/
 @media only screen and (max-width: 375px){
